feat: create calculator buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="calculator">
+        <div class="display"><input type="text" name="displayText" id="displayText" placeholder="50135"></input></div>
+        <div id="buttonsContainer">
+            <div id="numsContainer">
+                <button id="num9">9</button>
+                <button id="num8">8</button>
+                <button id="num7">7</button>
 
+                <button id="num6">6</button>
+                <button id="num5">5</button>
+                <button id="num4">4</button>
+
+                <button id="num3">3</button>
+                <button id="num2">2</button>
+                <button id="num1">1</button>
+                <button id="num0">0</button>
+            </div>
+            <div id="operatorsContainer">
+                <button id="clear">Clear</button>
+                <button id="num0">+</button>
+                <button id="num0">-</button>
+                <button id="num0">*</button>
+                <button id="num0">/</button>
+                <button id="num0">=</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
