--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
         <div class="display"><input type="text" name="displayText" id="displayText" placeholder="50135"></input></div>
         <div id="buttonsContainer">
             <div id="numsContainer">
-                <button id="num9">9</button>
-                <button id="num8">8</button>
-                <button id="num7">7</button>
+                <button class="btnNum btnItem" id="num9" value="9">9</button>
+                <button class="btnNum btnItem" id="num8" value="8">8</button>
+                <button class="btnNum btnItem" id="num7" value="7">7</button>
 
-                <button id="num6">6</button>
-                <button id="num5">5</button>
-                <button id="num4">4</button>
+                <button class="btnNum btnItem" id="num6" value="6">6</button>
+                <button class="btnNum btnItem" id="num5" value="5">5</button>
+                <button class="btnNum btnItem" id="num4" value="4">4</button>
 
-                <button id="num3">3</button>
-                <button id="num2">2</button>
-                <button id="num1">1</button>
-                <button id="num0">0</button>
+                <button class="btnNum btnItem" id="num3" value="3">3</button>
+                <button class="btnNum btnItem" id="num2" value="2">2</button>
+                <button class="btnNum btnItem" id="num1" value="1">1</button>
+                <button class="btnNum btnItem" id="num0" value="0">0</button>
             </div>
             <div id="operatorsContainer">
                 <button id="clear">Clear</button>
-                <button id="num0">+</button>
-                <button id="num0">-</button>
-                <button id="num0">*</button>
-                <button id="num0">/</button>
-                <button id="num0">=</button>
+                <button class="btnOperator btnItem" id="add" value="+">+</button>
+                <button class="btnOperator btnItem" id="subtract" value="-">-</button>
+                <button class="btnOperator btnItem" id="multiply" value="*">*</button>
+                <button class="btnOperator btnItem" id="divide" value="/">/</button>
+                <button class="btnOperator " id="equals" value="=">=</button>
             </div>
         </div>
     </div>
