feat: connect sum function to U.I.
This changes refactors (sort of) the code, changing some variable names, and creating some functions.

To achieve this, when an operator is typed (via buttons), it splits the string from the operator, saves both the numbers and the operator, and runs operate() with these values.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="btnOperator btnItem" id="subtract" value="-">-</button>
                 <button class="btnOperator btnItem" id="multiply" value="*">*</button>
                 <button class="btnOperator btnItem" id="divide" value="/">/</button>
-                <button class="btnOperator " id="equals" value="=">=</button>
+                <button id="equals" value="=">=</button>
             </div>
         </div>
     </div>
